--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "cors": "^2.8.5",
     "firebase-admin": "^11.11.0",
     "axios": "^1.6.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "redis": "^4.6.0",
+    "pg": "^8.11.0",
+    "chromadb": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
