Switch to ioredis for Railway Redis compatibility
The 'redis' npm package v4 doesn't handle Railway's Redis URLs well.
ioredis is MORE compatible with Railway and handles:
- URL parsing automatically
- ACL authentication properly
- Railway's internal networking

Changes:
- package.json: redis ^4.6.0 → ioredis ^5.3.2
- memoryService.js: Using ioredis instead of redis
- Simpler connection: new Redis(REDIS_URL)
- ioredis methods: lrange, lpush, ltrim (lowercase)

This should FINALLY fix the WRONGPASS error!

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "firebase-admin": "^11.11.0",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "redis": "^4.6.0",
+    "ioredis": "^5.3.2",
     "pg": "^8.11.0",
     "chromadb": "^1.8.0"
   },
